# word-template-generator

./: .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run.py  start.bat  start.command  start.ps1
.cursor/rules/: system-prompt.md
agent/: system_prompt.md
docs/: DEPLOYMENT_SERVER_RU.md  DEV_GUIDE_RU.md  GIT_FLOW_RU.md  OPERATOR_CHECKLIST_RU.md  README.md  RELEASE_CHECKLIST_RU.md  USER_GUIDE_RU.md  WINDOWS_SETUP_RU.md  completed.md  todo.md
docs/tasks/done/: task-feature-date-formatting.md  task-feature-visual-act-editor.md  task-ux-button-loaders.md  task-ux-interactive-file-list.md  task-ux-open-template.md
docs/tasks/pending/: task-feature-date-formatting.md  task-feature-visual-act-editor-rich-text.md  task-feature-visual-act-editor.md  task-ux-button-loaders.md  task-ux-file-lock-handling.md  task-ux-interactive-file-list.md  task-ux-open-template.md
nginx/: aosr-generator.conf  word-template-generator.conf
src/aosr_generator/: __init__.py  cli.py  ui.py  web_ui.py
src/word_template_generator/: __init__.py  cli.py  config.py  generator.py  ui.py  web_ui.py
src/word_template_generator/core/: __init__.py  generator.py  models.py  workspace.py
src/word_template_generator/desktop/: __init__.py  tk_app.py
src/word_template_generator/utils/: __init__.py  date_format.py  frontmatter.py  native_dialog.py
src/word_template_generator/web/: __init__.py  app.py  routes.py  (+2 more)
tests/: test_date_format.py  test_frontmatter_write.py  test_generator_date_tokens.py
(+4 files in other folders)
